--- a/src/main/java/mirea/prac16/GUI/GUIFrame.form
+++ b/src/main/java/mirea/prac16/GUI/GUIFrame.form
@@ -50,7 +50,7 @@
                   <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Label"/>
+                  <text value="Всего заказов: 0, на сумму: 0"/>
                 </properties>
               </component>
               <scrollpane id="8fcf7" binding="tableOrders">
@@ -71,7 +71,7 @@
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Label"/>
+                  <text value="Всего заказов: 0, на сумму: 0"/>
                 </properties>
               </component>
             </children>
@@ -152,7 +152,7 @@
                   <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Label"/>
+                  <text value="Итого"/>
                 </properties>
               </component>
               <component id="11cbd" class="javax.swing.JFormattedTextField" binding="firstNameField">
